--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-app",
+  "name": "chrisipowell",
   "description": "Description",
   "author": "Your Name",
   "version": "0.0.1",
