--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "url": ""
   },
   "scripts": {
-    "start": "brunch watch --server",
-    "prod": "brunch build --production"
+    "build" : "grunt build"
   },
   "dependencies": {},
   "devDependencies": {
