--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "url": "git@github.com:CIPowell/chrispowell.co.uk.git"
   },
   "scripts": {
-    "build" : "grunt build"
+    "build": "grunt build"
   },
   "dependencies": {},
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.4",
     "grunt": "^1.0.1",
     "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-compress": "^1.3.0",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^1.0.2",
+    "grunt-contrib-htmlmin": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-processhtml": "^0.4.1",
     "grunt-sass": "^1.2.1",
     "grunt-uncss": "^0.6.1",
     "jit-grunt": "^0.10.0",
