--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "scripts": {
     "build": "grunt build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "angular": "^1.6.2"
+  },
   "devDependencies": {
     "bootstrap": "^4.0.0-alpha.4",
     "grunt": "^1.0.1",
@@ -22,7 +24,7 @@
     "grunt-contrib-htmlmin": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-processhtml": "^0.4.1",
-    "grunt-sass": "^1.2.1",
+    "grunt-sass": "^2.0.0",
     "grunt-uncss": "^0.6.1",
     "jit-grunt": "^0.10.0",
     "load-grunt-config": "^0.19.2"
