--- a/package.json
+++ b/package.json
@@ -9,24 +9,37 @@
     "url": "git@github.com:CIPowell/chrispowell.co.uk.git"
   },
   "scripts": {
-    "build": "grunt build"
+    "build": "webpack"
   },
   "dependencies": {
-    "angular": "^1.6.2"
+    "angular": "^1.6.2",
+    "angular-jwt": "^0.1.9",
+    "angular-lock": "^1.0.5",
+    "angular-mocks": "^1.6.2",
+    "angular-route": "^1.6.2",
+    "auth0-js": "^8.3.0",
+    "auth0-lock": "^10.12.2",
+    "babel-loader": "^6.3.2",
+    "bootstrap": "v4.0.0-alpha.6"
   },
   "devDependencies": {
-    "bootstrap": "^4.0.0-alpha.4",
-    "grunt": "^1.0.1",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.2",
-    "grunt-contrib-htmlmin": "^2.0.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-processhtml": "^0.4.1",
-    "grunt-sass": "^2.0.0",
-    "grunt-uncss": "^0.6.1",
-    "jit-grunt": "^0.10.0",
-    "load-grunt-config": "^0.19.2"
+    "babel-core": "^6.23.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-plugin-stylus-compiler": "^1.4.0",
+    "babel-plugin-transform-css-import-to-string": "0.0.2",
+    "babel-plugin-version-inline": "^1.0.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.26.2",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "http-server": "^0.9.0",
+    "ngtemplate-loader": "^1.3.1",
+    "sass-loader": "^6.0.2",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
