--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 languageCode = "en-us"
 title = "Chris I Powell"
 baseURL = "https://www.chrisipowell.co.uk/"
-theme = "cip"
+theme = "chrisipowell"
 
 googleAnalytics = "UA-65763968-1"
 
