--- a/.github/workflows/branch.yaml
+++ b/.github/workflows/branch.yaml
@@ -8,8 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js 12.16.1
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: 12.16.1
-              
+          node-version: 12.x
+      - run: npm install
+      - run: npm test  
+        env: 
+          CI: true              
