--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: push to S3
         uses: jakejarvis/s3-sync-action@v0.5.0
         with:
-            args: --delete
+            args: --delete --acl public-read
         env:
             AWS_S3_BUCKET: dev.chrisipowell.co.uk
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
