--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,7 @@ jobs:
         with:
             args: --delete --acl public-read
         env:
-            AWS_S3_BUCKET: www.chrisipowell.co.uk
+            AWS_S3_BUCKET: chrisipowell
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             AWS_REGION: 'eu-west-1'
