add test exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,5 @@ sonar.projectKey=chrisipowellcouk
 sonar.projectName=ChrisIPowell.co.uk
 
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
+
+sonar.exclusions=**/*.test.js
