--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.projectName=ChrisIPowell.co.uk
 
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-sonar.exclusions=**/*.test.js
+sonar.exclusions=**/*.test.js,**/setupTests.js
