add sonar trunk analysis

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,6 +18,7 @@ jobs:
       - run: npm test  
         env: 
           CI: true
+      - run: npm run sonar -- -Dsonar.login=${{ secrets.SONAR_LOGIN }}
       - run: npm run build
       - name: push to S3
         uses: jakejarvis/s3-sync-action@v0.5.0
