--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 12.x
       - run: npm install
-      - run: npm test  
+      - run: npm test -- --coverage  
         env: 
           CI: true
       - run: npm run sonar -- -Dsonar.login=${{ secrets.SONAR_LOGIN }}
