--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "node-sass": "^4.13.1",
+    "hls.js": "^0.13.2",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-gtm-module": "^2.0.8",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-transition-group": "^4.3.0",
+    "redux": "^4.0.5",
     "tachyons-sass": "^4.9.5"
   },
   "scripts": {
@@ -55,6 +58,11 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-sonarjs": "^0.5.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.13.1",
+    "redux-devtools": "^3.5.0",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sonarqube-scanner": "^2.6.0",
     "tachyons": "^4.11.1"
   }
