--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.projectName=ChrisIPowell.co.uk
 
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
-sonar.exclusions=**/*.test.js,**/setupTests.js,**/*.test.tsx,**/*.test.ts
+sonar.coverage.exclusions=**/*.test.js,**/setupTests.js,**/*.test.tsx,**/*.test.ts,src/index.*
