--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ node_modules/
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -49,3 +50,4 @@ yarn-error.log*
 cypress/videos
 # stryker temp files
 .stryker-tmp
+.eslintcache
