--- a/package.json
+++ b/package.json
@@ -4,25 +4,24 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/enzyme": "^3.10.8",
-    "@types/jest": "^26.0.19",
-    "@types/node": "^14.14.17",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
+    "@testing-library/user-event": "^12.6.3",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
     "@types/react-gtm-module": "^2.0.0",
-    "@types/react-redux": "^7.1.14",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-transition-group": "^4.4.0",
     "@types/redux-mock-store": "^1.0.2",
-    "hls.js": "^0.13.2",
-    "node-sass": "^4.14.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-gtm-module": "^2.0.11",
-    "react-redux": "^7.2.2",
+    "hls.js": "^0.14.17",
+    "node-sass": "^5.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-gtm-module": "^2.0.10",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4.0.2",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -63,18 +62,14 @@
     ]
   },
   "devDependencies": {
-    "@stryker-mutator/core": "^3.3.1",
-    "@stryker-mutator/jest-runner": "^3.3.1",
-    "@stryker-mutator/typescript": "^3.3.1",
-    "cypress": "^4.12.1",
-    "cypress-cucumber-preprocessor": "^2.5.5",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "eslint-plugin-cypress": "^2.11.2",
-    "eslint-plugin-sonarjs": "^0.5.0",
-    "react-addons-test-utils": "^15.6.2",
-    "react-test-renderer": "^16.14.0",
-    "redux-devtools": "^3.7.0",
+    "@testing-library/react": "^11.2.5",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "cypress": "^6.4.0",
+    "cypress-cucumber-preprocessor": "^4.0.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "react-test-renderer": "^17.0.1",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "sonarqube-scanner": "^2.8.0",
