--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.3",
     "@testing-library/react": "^11.2.5",
+    "@types/testing-library__cypress": "^5.0.8",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "cypress": "^6.4.0",
@@ -73,6 +75,7 @@
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "sonarqube-scanner": "^2.8.0",
-    "tachyons": "^4.12.0"
+    "tachyons": "^4.12.0",
+    "ts-loader": "^8.0.15"
   }
 }
