--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-transition-group": "^4.4.0",
     "@types/redux-mock-store": "^1.0.2",
     "hls.js": "^0.14.17",
+    "luxon": "^1.26.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -64,6 +65,7 @@
   "devDependencies": {
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/react": "^11.2.5",
+    "@types/luxon": "^1.25.2",
     "@types/testing-library__cypress": "^5.0.8",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
