--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "cypress-cucumber-preprocessor": "^4.0.0",
     "eslint": "^7.11.0",
     "eslint-plugin-jest": "^24.1.3",
+    "fetch-mock": "^9.11.0",
     "react-test-renderer": "^17.0.1",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
