--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@types/redux-mock-store": "^1.0.2",
     "hls.js": "^0.14.17",
     "luxon": "^1.26.0",
-    "node-sass": "^5.0.0",
+    "node-sass": "^6.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gtm-module": "^2.0.10",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.2",
+    "react-scripts": "^4.0.3",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -65,12 +65,13 @@
   "devDependencies": {
     "@testing-library/cypress": "^7.0.3",
     "@testing-library/react": "^11.2.5",
+    "@types/hls.js": "^1.0.0",
     "@types/luxon": "^1.25.2",
     "@types/testing-library__cypress": "^5.0.8",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "cypress": "^6.4.0",
-    "cypress-cucumber-preprocessor": "^4.0.0",
+    "cypress-cucumber-preprocessor": "^4.2.0",
     "eslint": "^7.11.0",
     "eslint-plugin-jest": "^24.1.3",
     "react-test-renderer": "^17.0.1",
