--- a/package.json
+++ b/package.json
@@ -3,42 +3,15 @@
   "version": "0.1.16",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/user-event": "^12.6.3",
-    "@types/jest": "^26.0.10",
-    "@types/node": "^14.6.0",
-    "@types/react": "^17.0.1",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-gtm-module": "^2.0.0",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-transition-group": "^4.4.0",
-    "@types/redux-mock-store": "^1.0.2",
-    "hls.js": "^0.14.17",
-    "luxon": "^1.26.0",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-gtm-module": "^2.0.10",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "react-transition-group": "^4.4.1",
-    "redux": "^4.0.5",
-    "redux-logger": "^3.0.6",
-    "tachyons-sass": "^4.9.5",
-    "typescript": "^4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "echo 'need a new dev script'",
+    "build": "echo 'need a new build script'",
+    "test": "echo 'need a new test script'",
     "test:e2e": "cypress run",
     "sonar": "sonar-scanner"
   },
   "eslintConfig": {
-    "extends": "react-app",
     "plugins": [
       "cypress",
       "sonarjs"
@@ -63,22 +36,11 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.3",
-    "@testing-library/react": "^11.2.5",
-    "@types/hls.js": "^1.0.0",
-    "@types/luxon": "^1.25.2",
-    "@types/testing-library__cypress": "^5.0.8",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
     "cypress": "^6.4.0",
     "cypress-cucumber-preprocessor": "^4.2.0",
     "eslint": "^7.11.0",
     "eslint-plugin-jest": "^24.1.3",
-    "react-test-renderer": "^17.0.1",
-    "redux-mock-store": "^1.5.4",
-    "redux-thunk": "^2.3.0",
     "sonarqube-scanner": "^2.8.0",
-    "tachyons": "^4.12.0",
-    "ts-loader": "^8.0.15"
+    "tailwindcss": "^3.2.1",
   }
 }
