--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
-# Numerous always-ignore extensions
-*.diff
-*.err
-*.orig
-*.log
-*.rej
-*.swo
-*.swp
-*.vi
-*~
-*.sass-cache
-
-# OS or Editor folders
-.DS_Store
-.cache
-.project
-.settings
-.tmproj
-nbproject
-Thumbs.db
-
-# NPM packages folder.
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 /node_modules
@@ -29,11 +7,9 @@ node_modules/
 
 # testing
 /coverage
-/reports 
 
 # production
 /build
-/dist
 
 # misc
 .DS_Store
@@ -45,9 +21,3 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.scannerwork
-cypress/videos
-# stryker temp files
-.stryker-tmp
-.eslintcache
