Add Chromatic and storybook

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-    "extends": ["react-app", "plugin:jsx-a11y/recommended"]
-  }
+    "extends": [
+        "react-app",
+        "plugin:jsx-a11y/recommended",
+        "plugin:storybook/recommended"
+    ]
+}
