--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "soapbox",
+  "name": "chrisipowell.co.uk",
   "version": "0.1.3",
   "private": true,
   "dependencies": {
-    "@builder.io/react": "^2.0.14",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.2",
-    "date-fns": "^2.29.3",
+    "@builder.io/react": "^3.2.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
+    "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sonar": "sonar-scanner"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_830d00c2a520f5b",
+    "sonar": "sonarqube-scanner"
   },
   "eslintConfig": {
     "extends": [
@@ -40,7 +43,20 @@
     ]
   },
   "devDependencies": {
-    "@axe-core/react": "^4.6.0",
-    "sonar-scanner": "^3.1.0"
+    "@axe-core/react": "^4.8.4",
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-links": "^7.6.14",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.14",
+    "@storybook/preset-create-react-app": "^7.6.14",
+    "@storybook/react": "^7.6.14",
+    "@storybook/react-webpack5": "^7.6.14",
+    "@storybook/test": "^7.6.14",
+    "chromatic": "^10.9.3",
+    "eslint-plugin-storybook": "^0.6.15",
+    "storybook": "^7.6.14",
+    "webpack": "^5.90.1",
+    "sonarqube-scanner": "^3.3.0"
   }
 }
