--- a/package.json
+++ b/package.json
@@ -45,18 +45,17 @@
   "devDependencies": {
     "@axe-core/react": "^4.8.4",
     "@storybook/addon-essentials": "^8.0.4",
-    "@storybook/addon-interactions": "^7.6.14",
-    "@storybook/addon-links": "^7.6.14",
+    "@storybook/addon-interactions": "^8.0.4",
+    "@storybook/addon-links": "^8.0.4",
     "@storybook/addon-onboarding": "^1.0.11",
     "@storybook/blocks": "^8.0.4",
-    "@storybook/preset-create-react-app": "^7.6.14",
-    "@storybook/react": "^7.6.14",
-    "@storybook/react-webpack5": "^7.6.14",
+    "@storybook/preset-create-react-app": "^8.0.4",
+    "@storybook/react": "^8.0.4",
+    "@storybook/react-webpack5": "^8.0.4",
     "@storybook/test": "^8.0.4",
-    "chromatic": "^10.9.3",
-    "eslint-plugin-storybook": "^0.6.15",
-    "storybook": "^7.6.14",
-    "webpack": "^5.90.1",
-    "sonarqube-scanner": "^3.3.0"
+    "chromatic": "^11.2.0",
+    "eslint-plugin-storybook": "^0.8.0",
+    "storybook": "^8.0.4",
+    "webpack": "^5.91.0"
   }
 }
